jenkins/deployInK8s/marslo-jenkins-recommended.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-jenkins
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-jenkins
  template:
    metadata:
      labels:
        app: devops-jenkins
    spec:
      containers:
        - name: devops-jenkins
          image: jenkins/jenkins:2.196
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
            - name: cli-port
              containerPort: 38238
          volumeMounts:
            - name: devops-jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: docker
              mountPath: /usr/bin/docker
      nodeSelector:
        jenkins: master
      volumes:
        - name: devops-jenkins-home
          hostPath:
            path: /opt/DEVOPS_JENKINS
            type: Directory
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: docker
          hostPath:
            path: /usr/bin/docker
      nodeSelector:
        jenkins: "true"
      serviceAccount: "jenkins-admin"

---
apiVersion: v1
kind: Service
metadata:
  name: devops-jenkins
  namespace: devops
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  ports:
    - name: devops-jenkins
      port: 8080
      targetPort: 8080
    - name: jenkins-agent
      port: 50000
      targetPort: 50000
  selector:
    app: devops-jenkins
  externalIPs:
    - 10.69.78.15
---
apiVersion: v1
kind: Service
metadata:
  name: devops-jenkins-discovery
  namespace: devops
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  ports:
    - name: cli-agent
      port: 38238
      targetPort: 38238
  selector:
    app: devops-jenkins
  externalIPs:
    - 10.69.78.15


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-jenkins
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - ssdfw-staging-jenkins.marvell.com
    secretName: marvell-certs
  rules:
  - host: ssdfw-staging-jenkins.marvell.com
    http:
      paths:
      - path:
        backend:
          serviceName: devops-jenkins
          servicePort: 8080
